# ReAnalyse

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PINECONE_FIX_GUIDE.md  README.md  check_available_models.py  check_models.py  create_test_pdf.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_pinecone_index.py  test_pinecone_api.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md
src/financial_analyzer/: __init__.py  config.py
src/financial_analyzer/embeddings/: __init__.py  gemini_embedder.py
src/financial_analyzer/ingest/: __init__.py  chunker.py  document_loader.py
src/financial_analyzer/rag/: __init__.py  chains.py  prompts.py
src/financial_analyzer/ui/: __init__.py  streamlit_app.py
src/financial_analyzer/utils/: __init__.py  errors.py  helpers.py  logger.py
src/financial_analyzer/vector_store/: __init__.py  pinecone_client.py  retriever.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_e2e.py
tests/unit/: __init__.py  test_chunker.py  test_document_loader.py
